[project]
name = "Agentic-AI-Query-Retrieval"
version = "0.1.0"
description = "Answering either an elaborate or non-elaborate statement using an agentive system, which is powered by LangGraph."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "langchain-core>=0.3.64",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.8",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
]
